Fix alignment of errors in the reader sidebar
References #4034

--- a/client/app/styles/reader/_reviewer.scss
+++ b/client/app/styles/reader/_reviewer.scss
@@ -99,7 +99,6 @@
   }
 
   .usa-alert {
-    float: left;
     margin-top: 15px;
   }
 }
